// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 0 expenses 1`] = `
<div>
  Viewing 0 expenses totalling: $0.00
</div>
`;

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div>
  Viewing 1 expense totalling: $1,095.00
</div>
`;

exports[`should render ExpensesSummary with more than 1 expenses 1`] = `
<div>
  Viewing 3 expenses totalling: $1,141.95
</div>
`;
